--- a/src/app/core/navbar-dropdown/navbar-dropdown.component.html
+++ b/src/app/core/navbar-dropdown/navbar-dropdown.component.html
@@ -2,7 +2,5 @@
     Operators
 </a>
 <nz-dropdown-menu #menu="nzDropdownMenu">
-    <ul nz-menu nzSelectable>
-        <li *ngFor="let operator of operators | keyvalue" nz-menu-item>1st menu item</li>
-    </ul>
+    <app-operators-options></app-operators-options>
 </nz-dropdown-menu>
