--- a/src/app/core/main-page/main-page.component.scss
+++ b/src/app/core/main-page/main-page.component.scss
@@ -1,3 +1,17 @@
 .app-title {
+    font-weight: bold;
+    font-size: 32px;
     color: white;
+}
+
+.outer-layout {
+    height: 95vh;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    border: 0.5px solid rgb(170, 170, 170);
 }
