add few basic elements

--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,1 +1,1 @@
-<h1> If you want to learn more about rxjs choose one of operators on the left menu.</h1>
+<p class="home-text"> If you want to learn more about rxjs choose one of operators on the left menu.</p>
