--- a/src/app/core/components/page-not-found/page-not-found.component.scss
+++ b/src/app/core/components/page-not-found/page-not-found.component.scss
@@ -1,9 +1,10 @@
 :host {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    .home-text {
+    .page-not-found-text {
         font-size: x-large;
         font-weight: 500;
     }
