--- a/src/app/core/components/main-page/main-page.component.html
+++ b/src/app/core/components/main-page/main-page.component.html
@@ -1,21 +1,18 @@
-<nz-layout class="outer-layout">
-    <nz-header>
+<nz-layout class="layout">
+    <nz-header class="layout__header">
         <div nz-row>
             <div nz-col nzSpan="24">
-                <span class="app-title">Rxjs for Dummies</span>
+                <span class="layout__app-title"><a [routerLink]="''" class="layout__home-link">Rxjs for Dummies</a></span>
             </div>
-            <!-- <div nz-col>
-                <app-navbar-dropdown></app-navbar-dropdown>
-            </div> -->
         </div>
     </nz-header>
-    <nz-layout class="inner-layout">
-        <nz-sider nzWidth="10%" nzTheme="light" class="sider">
-            <app-operators-options class="sider-options"></app-operators-options>
+    <nz-layout>
+        <nz-sider nzWidth="10%" nzTheme="light" class="layout__sider">
+            <app-operators-options class="layout__sider-options"></app-operators-options>
         </nz-sider>
-        <nz-content class=" main-content ">
+        <nz-content class="layout__main-content">
             <router-outlet></router-outlet>
         </nz-content>
     </nz-layout>
-    <nz-footer class="footer ">Seweryn Cholewa © Rxjs for Dummies 2023</nz-footer>
+    <nz-footer class="layout__footer">Seweryn Cholewa © Rxjs for Dummies 2023</nz-footer>
 </nz-layout>
