--- a/src/app/core/components/main-page/main-page.component.scss
+++ b/src/app/core/components/main-page/main-page.component.scss
@@ -1,17 +1,19 @@
-.app-title {
-    font-weight: bold;
-    font-size: 32px;
-    color: white;
-}
-
-.outer-layout {
+.layout {
     height: 95vh;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    border: 0.5px solid rgb(170, 170, 170);
+    &__app-title {
+        font-weight: bold;
+        font-size: 32px;
+        color: white;
+        a {
+            text-decoration: inherit;
+            color: inherit;
+        }
+    }
+    &__footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        border: 0.5px solid rgb(170, 170, 170);
+    }
 }
