--- a/src/app/core/components/operators-options/operators-options.component.html
+++ b/src/app/core/components/operators-options/operators-options.component.html
@@ -1,3 +1,3 @@
 <ul nz-menu nzSelectable>
-    <li *ngFor="let operator of operators | keyvalue" nz-menu-item><a [routerLink]="['/operators/', operator.value | changeSpacebarToDivider]"> {{ operator.value }}</a></li>
+    <li *ngFor="let operator of operators | keyvalue" nz-menu-item><a [routerLink]="['/operators', operator.value | changeSpacebarToDivider]"> {{ operator.value | titlecase}}</a></li>
 </ul>
