--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+.description-text {
+    font-size: medium;
+    font-weight: 400;
+    .important {
+        font-size: large;
+        font-weight: 500;
+    }
+}
