--- a/src/app/core/components/main-page/main-page.component.scss
+++ b/src/app/core/components/main-page/main-page.component.scss
@@ -1,6 +1,6 @@
 .layout {
     height: 95vh;
-    &__app-title {
+    .app-title {
         font-weight: bold;
         font-size: 32px;
         color: white;
@@ -9,7 +9,12 @@
             color: inherit;
         }
     }
-    &__footer {
+    .main-content {
+        height: 97.5%;
+        overflow: auto;
+        padding: 15px;
+    }
+    .footer {
         position: absolute;
         bottom: 0;
         width: 100%;
