--- a/src/app/operators/components/filter-operator/filter-operator.component.html
+++ b/src/app/operators/components/filter-operator/filter-operator.component.html
@@ -1,1 +1,18 @@
-<p>filter-operator works!</p>
+<app-operator-page>
+    <div short-description>
+        <p class="description-text">
+            <span class="important"> Filter </span>- to filter values emitted by an observable based on a condition. It allows you to selectively pass on values emitted by an observable to downstream operators or subscribers. In example below it is used
+            to ........
+        </p>
+    </div>
+    <div example-code>
+        <quill-view format="text" [content]="codeExample" [preserveWhitespace]="true"></quill-view>
+    </div>
+    <div class="example-use" example-use>
+        <app-people-table [tableData]="tableData"></app-people-table>
+        <div clas="filter-wrapper">
+            <p>Name filter</p>
+            <input class="name-filter" nz-input placeholder="Name filter" type="string" [formControl]="nameFilterControler" />
+        </div>
+    </div>
+</app-operator-page>
