--- a/src/app/operators/components/merge-operator/merge-operator.component.html
+++ b/src/app/operators/components/merge-operator/merge-operator.component.html
@@ -1,1 +1,13 @@
-<p>merge-operator works!</p>
+<app-operator-page>
+    <div short-description>
+        <p class="description-text">
+            <span class="important"> Merge </span>- is an operator in RxJS that is used for flattening observables that emit other observables, and merging the emitted values into a single observable stream.
+
+        </p>
+    </div>
+    <div example-code>
+        <quill-view format="text" [content]="codeExample" [preserveWhitespace]="true"></quill-view>
+    </div>
+    <div class="example-use" example-use>
+    </div>
+</app-operator-page>
