--- a/src/app/operators/components/exhaust-map-operator/exhaust-map-operator.component.html
+++ b/src/app/operators/components/exhaust-map-operator/exhaust-map-operator.component.html
@@ -2,17 +2,20 @@
     <div short-description>
         <p class="description-text">
             <span class="important"> Exhaust map </span>- is used to ignore any new observable streams that are emitted by an observable until the current observable stream has completed. It can be useful in scenarios where we want to ensure that only
-            one active inner observable is running at a time and avoid potential race conditions between multiple active inner observables. In exmaple below it is used
+            one active inner observable is running at a time and avoid potential race conditions between multiple active inner observables. In exmaple below it is used ...
         </p>
     </div>
     <div example-code>
         <quill-view format="text" [content]="codeExample" [preserveWhitespace]="true"></quill-view>
     </div>
     <div class="example-use" example-use>
-        <app-people-table [tableData]="tableData"></app-people-table>
-        <div class="filter-wrapper">
-            <span>Filter input with distinct until changed</span>
-            <input class="name-filter" nz-input placeholder="Name filter" type="string" [formControl]="nameFilterControler" />
-        </div>
+        <ul>
+            <li *ngFor="let person of listOfUsers"> {{ person.name }}</li>
+        </ul>
+        <form [formGroup]="form" (submit)="submitForm()">
+            <input nz-input formControlName="name" placeholder="Name">
+            <input nz-input formControlName="age" placeholder="Age">
+            <button nz-button nzType="primary" type="submit" [disabled]="form.invalid">Submit</button>
+        </form>
     </div>
 </app-operator-page>
