--- a/src/app/operators/components/switch-map-operator/switch-map-operator.component.html
+++ b/src/app/operators/components/switch-map-operator/switch-map-operator.component.html
@@ -1,1 +1,12 @@
-<p>switch-map-operator works!</p>
+<app-operator-page>
+    <div short-description>
+        <p class="description-text">
+            <span class="important"> Switch map </span>- ...
+        </p>
+    </div>
+    <div example-code>
+        <quill-view format="text" [content]="codeExample" [preserveWhitespace]="true"></quill-view>
+    </div>
+    <div class="example-use" example-use>
+    </div>
+</app-operator-page>
