add few operators

--- a/src/app/operators/components/merge-map-operator/merge-map-operator.component.html
+++ b/src/app/operators/components/merge-map-operator/merge-map-operator.component.html
@@ -1,8 +1,7 @@
 <app-operator-page>
     <div short-description>
         <p class="description-text">
-            <span class="important"> Merge map </span>- is an operator in RxJS that is used for flattening observables that emit other observables, and merging the emitted values into a single observable stream.
-
+            <span class="important"> Merge map </span>- is an operator in RxJS that is used for flattening observables that emit other observables, and merging the emitted values into a single observable stream. ...
         </p>
     </div>
     <div example-code>
